<resources>
    <string name="app_name">Food Runner</string>
    <string name="password">Password</string>
    <string name="mobile_number_10_digit">Mobile Number(10 digit)</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account?Sign up now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="preference_file_name">Food_App</string>
    <string name="enter">Enter</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below:</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="favourites">Favourites</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password(Min 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="register2">Register</string>
    <string name="enter_the_received_otp_below">Enter the received OTP below</string>
    <string name="otp_4_characters">OTP(4 characters)</string>
    <string name="new_password">New Password</string>
    <string name="submit">Submit</string>
    <string name="search_restaurants">Search Restaurants</string>
    <string name="can_t_find">Can\'t Find</string>
    <string name="no_favourite_restaurant">No Favourite Restaurant</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
    <string name="no_orders">No Orders</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="_299">299</string>
    <string name="_4_5">4.5</string>
    <string name="date">Date</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed</string>
    <string name="ok">OK</string>
    <string name="your_order_has_been_successfully_placed1">Your order has been successfully placed!</string>
    <string name="ordering_from">Ordering From:</string>
    <string name="place_order">Place Order</string>
    <string name="choose_the_menu_listed_below">Choose the menu listed below</string>
    <string name="proceed_to_cart">Proceed to cart</string>
    <string name="food_runner">Food Runner</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="q1_how_will_the_food_be_deliverd">Q1.How will the food be deliverd?</string>
    <string name="ans1_the_food_will_be_delivered_by_our_delivery_man_at_the_address_given_by_you">Ans1:The food will be delivered by our delivery man at the address given by you.</string>
    <string name="q2_how_much_time_will_it_take_to_deliver_the_food">Q2.How much time will it take to deliver the food?</string>
    <string name="our_delivery_man_will_try_to_deliver_your_order_as_fast_as_he_can_but_in_case_of_traffic_or_some_other_reasons_it_might_take_a_little_longer">Our delivery man will try to deliver your order as fast as he can.But in case of traffic or some other reasons, it might take a little longer.</string>
    <string name="dish_name">Dish Name</string>
    <string name="rs_400">Rs.400</string>
    <string name="list_item1">List Item1</string>
    <string name="rs_299">Rs.299</string>
</resources>