<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ResetPasswordActivity"
    android:background="#ff4500"
    android:id="@+id/rlContent3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_received_otp_below"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:id="@+id/txtEnter"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/otp_4_characters"
        android:layout_below="@id/txtEnter"
        android:background="#ffffff"
        android:textColor="#000000"
        android:inputType="number"
        android:id="@+id/etOTP"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/new_password"
        android:layout_below="@id/etOTP"
        android:background="#ffffff"
        android:textColor="#000000"
        android:inputType="textPassword"
        android:id="@+id/etPassword3"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/confirm_password"
        android:layout_below="@id/etPassword3"
        android:background="#ffffff"
        android:textColor="#000000"
        android:inputType="textPassword"
        android:id="@+id/etConfirmPassword3"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSubmit"
        android:text="@string/submit"
        android:layout_below="@id/etConfirmPassword3"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:background="#ff3300"/>


</RelativeLayout>