<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff"
        tools:context="fragment.FaqFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/q1_how_will_the_food_be_deliverd"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#ff4500"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/ans1_the_food_will_be_delivered_by_our_delivery_man_at_the_address_given_by_you"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/q2_how_much_time_will_it_take_to_deliver_the_food"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#ff4500"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/our_delivery_man_will_try_to_deliver_your_order_as_fast_as_he_can_but_in_case_of_traffic_or_some_other_reasons_it_might_take_a_little_longer"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"/>



    </LinearLayout>
</ScrollView>