<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:id="@+id/rlRegister"
    android:background="#ff5039">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/etName"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="100dp"
        android:hint="@string/name"
        android:inputType="text"
        android:background="#ffffff"
        android:textColor="#000000"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/etEmail"
        android:layout_below="@id/etName"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:background="#ffffff"
        android:textColor="#000000"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/etMobileNumber2"
        android:maxLength="10"
        android:maxLines="1"
        android:layout_below="@id/etEmail"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/mobile_number_10_digit"
        android:inputType="number"
        android:textColor="#000000"
        android:background="#ffffff"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/etAddress"
        android:layout_below="@id/etMobileNumber2"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/delivery_address"
        android:inputType="text"
        android:textColor="#000000"
        android:background="#ffffff"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/etPassword2"
        android:layout_below="@id/etAddress"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/password_min_4_characters"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:background="#ffffff"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/etConfirmPassword"
        android:layout_below="@id/etPassword2"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:background="#ffffff"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register2"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:id="@+id/btnRegisterPage"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@id/etConfirmPassword"
        android:layout_marginTop="30dp"
        android:background="#FF3300"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/coordinateLayout">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="?attr/actionBarSize"
                android:background="#Ff5039"
                android:id="@+id/toolbar"
                app:layout_scrollFlags="scroll|enterAlways"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/frameLayout"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>