<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="#FF5039">



        <ImageView
            android:id="@+id/imgAvengers"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/food_runner_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:maxLines="1"
            android:background="#ffffff"
            android:textColor="#000000"
            android:layout_below="@id/imgAvengers"
            android:hint="@string/mobile_number_10_digit"
            android:padding="6dp"
            android:layout_marginTop="20dp"
            android:inputType="phone"
            android:maxLength="10"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="6dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#000000"
            android:background="#ffffff"
            android:layout_below="@id/etMobileNumber"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="6dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/etPassword"
            android:background="#FF3300"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btnLogIn"
            android:layout_marginTop="20dp"
            android:padding="6dp"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_sign_up_now"
            android:textStyle="normal"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:padding="6dp"
            android:textColor="#FFFFFF"/>


    </RelativeLayout>