<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotActivity"
    android:background="#ff5039"
    android:id="@+id/rlContent">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/food_runner_logo"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/imgLogo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtInstruction"
        android:layout_below="@id/imgLogo"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/enter_your_registered_mobile_number_and_email_below"
        android:textSize="18sp"
        android:textColor="#ffffff"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etMobileNumber3"
        android:layout_below="@id/txtInstruction"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:background="#ffffff"
        android:textColor="#000000"
        android:hint="@string/mobile_number"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etMailAddress"
        android:layout_below="@id/etMobileNumber3"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:padding="6dp"
        android:inputType="textEmailAddress"
        android:maxLength="10"
        android:maxLines="1"
        android:background="#ffffff"
        android:hint="@string/email_address"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etMailAddress"
        android:padding="6dp"
        android:background="#ff0000"
        android:id="@+id/btnNext"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/next"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"/>

</RelativeLayout>