<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_margin="6dp"
    android:id="@+id/cardRestaurant"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rlContent">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:id="@+id/imgRestaurantImage"
            android:src="@mipmap/ic_launcher"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="5dp"
            android:scaleType="centerCrop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_name"
        android:id="@+id/txtRestaurantName"
        android:layout_marginHorizontal="20dp"
        android:layout_toRightOf="@id/imgRestaurantImage"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:textColor="#000000"
        android:padding="5dp"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/imgRupees"
            android:src="@drawable/rupees"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/imgRestaurantImage"
            android:layout_below="@id/txtRestaurantName"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtPrice"
            android:text="@string/_299"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="43dp"
            android:textColor="#000000"
            android:layout_toRightOf="@id/imgRestaurantImage"
            android:layout_below="@id/txtRestaurantName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtRating"
            android:text="@string/_4_5"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:layout_marginTop="63dp"
            android:layout_marginRight="10dp"
            android:textColor="#fbc02d"/>

        <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/fav"
            android:id="@+id/imgFav"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>